plugins {
	id 'edu.sc.seis.launch4j' version '2.4.6'
	id "io.freefair.lombok" version "5.3.0"
	id 'java'
}

group = 'com'
version = '1.0'
sourceCompatibility = 11

repositories {
	mavenCentral()
	jcenter()
}

dependencies {
	compile 'org.jmonkeyengine:jme3-core:3.4.0-stable'
	compile 'org.jmonkeyengine:jme3-desktop:3.4.0-stable'
	compile 'org.jmonkeyengine:jme3-lwjgl3:3.4.0-stable'
	compile 'org.openjfx:javafx-base:13:win'
	compile 'org.openjfx:javafx-controls:13:win'
	compile 'org.openjfx:javafx-graphics:13:win'
	compile 'org.openjfx:javafx-fxml:13:win'
	compile 'org.openjfx:javafx-media:13:win'
	compile 'org.lwjgl:lwjgl'
	compile 'org.jetbrains:annotations:18.0.0'
	compile 'org.slf4j:slf4j-log4j12:1.7.29'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
}

jar {
	archivesBaseName = 'Rlib&jME-javaFX'
	enabled = true
}

launch4j {
	headerType = "console"
	outfile = "Rlib&jME-javaFX.exe"
	jar = '../libs/Rlib&jME-javaFX-1.0.jar'
}